--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install Salesforce CLI
-         run: npm install -g @salesforce/cli
-
+      - name: 🛠 Install Salesforce CLI
+        run: npm install -g @salesforce/cli
 
       - name: 🔐 Authenticate with Salesforce
         run: sf org login jwt --client-id ${{ secrets.SF_CONSUMER_KEY }} --jwt-key-file private.key --username ${{ secrets.SF_USERNAME }} --instance-url https://login.salesforce.com --set-default
@@ -47,17 +46,17 @@ jobs:
       # ✅ PARALLEL TEST + REPORT BLOCK
       - name: 👤 Get Commit Author Email
         shell: pwsh
-        run: ./scripts/gitAuthorMail.ps1
+        run: ./pipeline_scripts/gitAuthorMail.ps1
 
       - name: 🔍 Detect Changed Apex Classes
         shell: pwsh
-        run: ./scripts/detectChangedApex.ps1
+        run: ./pipeline_scripts/detectChangedApex.ps1
 
       - name: 🧪 Run Related Apex Tests (Async)
         shell: pwsh
-        run: ./scripts/runRelatedTests.ps1
+        run: ./pipeline_scripts/runRelatedTests.ps1
 
       - name: 📧 Send Apex Test Report Email
         if: env.HAS_APEX_CHANGES == 'true'
         shell: pwsh
-        run: ./scripts/sendTestReportEmail.ps1
+        run: ./pipeline_scripts/sendTestReportEmail.ps1
