--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
       - name: 🛠 Install Salesforce CLI
         run: npm install -g @salesforce/cli
 
+      - name: 📦 Install sfdx-git-delta Plugin
+        run: sf plugins install sfdx-git-delta
+
       - name: 🔐 Authenticate with Salesforce
         run: sf org login jwt --client-id ${{ secrets.SF_CONSUMER_KEY }} --jwt-key-file Assets/server.key --username ${{ secrets.SF_USERNAME }} --instance-url https://login.salesforce.com --set-default
 
