--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
         run: npm install -g @salesforce/cli
 
       - name: 📦 Install sfdx-git-delta Plugin
-        run: sf plugins install sfdx-git-delta
+         run: sf plugins install sfdx-git-delta --no-prompt --force
+
 
       - name: 🔐 Authenticate with Salesforce
         run: sf org login jwt --client-id ${{ secrets.SF_CONSUMER_KEY }} --jwt-key-file Assets/server.key --username ${{ secrets.SF_USERNAME }} --instance-url https://login.salesforce.com --set-default
