--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,11 +1,14 @@
 {
-    "packageDirectories": [
-        {
-            "path": "force-app",
-            "default": true
-        }
-    ],
-    "namespace": "",
-    "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "43.0"
+  "packageDirectories": [
+    {
+      "path": "force-app/main",
+      "default": true
+    },
+    {
+      "path": "force-app/test"
+    }
+  ],
+  "namespace": "",
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "60.0"
 }
