--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,6 @@ jobs:
           echo "🔍 Checking delta contents..."
           ls -R delta || echo "⚠️ Delta folder is empty"
 
-
       # ✅ PARALLEL TEST + REPORT BLOCK
       - name: 👤 Get Commit Author Email
         shell: pwsh
@@ -71,12 +70,10 @@ jobs:
         run: ./scripts/runRelatedTests.ps1
 
       - name: 📧 Send Apex Test Report Email
-       if: env.HAS_APEX_CHANGES == 'true'
-       shell: pwsh
-       env:
-           USERNAME: ${{ secrets.EMAIL_USERNAME }}         # e.g., buvanesh@yourdomain.com
-           PASSWORD: ${{ secrets.EMAIL_PASSWORD }}         # App password or login password
-           GIT_AUTHOR_EMAIL: ${{ env.gitAuthorEmail }}     # Set earlier via PowerShell
-       run: ./scripts/sendTestReportEmail.ps1
-
-
+        if: env.HAS_APEX_CHANGES == 'true'
+        shell: pwsh
+        env:
+          USERNAME: ${{ secrets.EMAIL_USERNAME }}
+          PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          GIT_AUTHOR_EMAIL: ${{ env.gitAuthorEmail }}
+        run: ./scripts/sendTestReportEmail.ps1
