--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
           echo 'Installing sf CLI'
           npm install -g @salesforce/cli@latest
 
-          echo 'Installing sfdx-git-delta plugin'
-          echo y | sfdx plugins:install sfdx-git-delta
+          # echo 'Installing sfdx-git-delta plugin'
+          # echo y | sfdx plugins:install sfdx-git-delta
 
       - name: 🔐 Authenticate with Salesforce (JWT Auth)
         run: |
@@ -43,48 +43,48 @@ jobs:
             --instance-url https://login.salesforce.com \
             --set-default
 
-      - name: 📦 Prepare Delta Package
-        run: |
-          mkdir -p delta
-          npx sfdx sgd:source:delta --to "HEAD" --from "HEAD~1" --output "delta" --generate-delta
+      # - name: 📦 Prepare Delta Package
+      #   run: |
+      #     mkdir -p delta
+      #     npx sfdx sgd:source:delta --to "HEAD" --from "HEAD~1" --output "delta" --generate-delta
 
-      - name: 📂 Debug Delta Output
-        run: |
-          echo "🔍 Checking delta contents..."
-          ls -R delta || echo "⚠️ Delta folder is empty"
+      # - name: 📂 Debug Delta Output
+      #   run: |
+      #     echo "🔍 Checking delta contents..."
+      #     ls -R delta || echo "⚠️ Delta folder is empty"
 
-      - name: 👤 Get Commit Author Email
-        shell: pwsh
-        env:
-          GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_SHA: ${{ github.sha }}
-        run: ./scripts/gitAuthorMail.ps1
+      # - name: 👤 Get Commit Author Email
+      #   shell: pwsh
+      #   env:
+      #     GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     GITHUB_REPOSITORY: ${{ github.repository }}
+      #     GITHUB_SHA: ${{ github.sha }}
+      #   run: ./scripts/gitAuthorMail.ps1
 
-      - name: 🔍 Detect Changed Apex Classes
-        shell: pwsh
-        run: ./scripts/detectChangedApex.ps1
+      # - name: 🔍 Detect Changed Apex Classes
+      #   shell: pwsh
+      #   run: ./scripts/detectChangedApex.ps1
 
-      - name: 🚀 Deploy Delta to QA Org
-        if: env.HAS_APEX_CHANGES == 'true'
-        run: |
-          sf project deploy start --source-dir delta/force-app --target-org ${{ secrets.SF_USERNAME }} --wait 10
+      # - name: 🚀 Deploy Delta to QA Org
+      #   if: env.HAS_APEX_CHANGES == 'true'
+      #   run: |
+      #     sf project deploy start --source-dir delta/force-app --target-org ${{ secrets.SF_USERNAME }} --wait 10
 
-      - name: 🧪 Trigger Apex Tests Asynchronously
-        shell: pwsh
-        run: ./scripts/runRelatedTests.ps1
+      # - name: 🧪 Trigger Apex Tests Asynchronously
+      #   shell: pwsh
+      #   run: ./scripts/runRelatedTests.ps1
 
-      - name: 📥 Fetch Apex Test Results
-        shell: pwsh
-        run: ./scripts/fetchAsyncTestResults.ps1
+      # - name: 📥 Fetch Apex Test Results
+      #   shell: pwsh
+      #   run: ./scripts/fetchAsyncTestResults.ps1
 
 
-      - name: 📧 Send Apex Test Report Email
-        if: env.HAS_APEX_CHANGES == 'true'
-        shell: pwsh
-        env:
-          USERNAME: ${{ vars.EMAIL_USERNAME }}
-          PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-          GIT_AUTHOR_EMAIL: ${{ env.gitAuthorEmail }}
-        run: ./scripts/sendTestReportEmail.ps1
+      # - name: 📧 Send Apex Test Report Email
+      #   if: env.HAS_APEX_CHANGES == 'true'
+      #   shell: pwsh
+      #   env:
+      #     USERNAME: ${{ vars.EMAIL_USERNAME }}
+      #     PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+      #     GIT_AUTHOR_EMAIL: ${{ env.gitAuthorEmail }}
+      #   run: ./scripts/sendTestReportEmail.ps1
 
